--- a/.github/workflows/urlTOapk.yml
+++ b/.github/workflows/urlTOapk.yml
@@ -47,7 +47,8 @@ jobs:
             "server": { "url": "${{ steps.meta.outputs.url }}", "cleartext": true },
             "plugins": {
               "SplashScreen": {
-                "launchAutoHide": false,
+                "launchAutoHide": true,
+                "launchShowDuration": 3000,
                 "backgroundColor": "#ffffff",
                 "androidScaleType": "CENTER_CROP",
                 "showSpinner": true
@@ -63,16 +64,15 @@ jobs:
             npm install @capacitor/assets --save-dev
             npx capacitor-assets generate --android --assetPath assets
           fi
-          # নতুন লাইটওয়েট এরর পেজ ডাউনলোড
           mkdir -p android/app/src/main/assets/public
           curl -L https://raw.githubusercontent.com/ibnc-r/Torikul/refs/heads/main/assets/error.html -o android/app/src/main/assets/public/error.html
 
       - name: Professional Optimization
         run: |
           echo "kotlin.stdlib.default.dependency=false" >> android/gradle.properties
-          sed -i '/dependencies {/a \    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")\n    constraints {\n        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.22")\n        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22")\n    }' android/app/build.gradle
+          sed -i '/dependencies {/a \    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")' android/app/build.gradle
 
-          # MainActivity - ল্যাগ এবং ক্র্যাশ ফ্রি প্রো কোড
+          # MainActivity - এরর মুক্ত রিভাইজড কোড
           PKG_PATH=$(echo "${{ steps.meta.outputs.package }}" | sed 's/\./\//g')
           cat <<EOF > "android/app/src/main/java/$PKG_PATH/MainActivity.java"
           package ${{ steps.meta.outputs.package }};
@@ -93,31 +93,11 @@ jobs:
 
           public class MainActivity extends BridgeActivity {
               private ProgressBar progressBar;
-              private String mainUrl;
-
-              @Override
-              protected void onCreate(Bundle savedInstanceState) {
-                  super.onCreate(savedInstanceState);
-                  mainUrl = "${{ steps.meta.outputs.url }}";
-                  
-                  // ১. চেক করবে শুরুতে নেট আছে কিনা
-                  if (!isNetworkAvailable()) {
-                      hideSplash(); // নেট না থাকলে লোগো সরাও
-                  }
-              }
 
               private boolean isNetworkAvailable() {
                   ConnectivityManager cm = (ConnectivityManager) getSystemService(Context.CONNECTIVITY_SERVICE);
                   NetworkInfo netInfo = cm.getActiveNetworkInfo();
                   return netInfo != null && netInfo.isConnected();
-              }
-
-              private void hideSplash() {
-                  getBridge().executeOnMainThread(() -> {
-                      if (getBridge().getPlugin("SplashScreen") != null) {
-                          getBridge().getPlugin("SplashScreen").getInstance().hide(null);
-                      }
-                  });
               }
 
               @Override
@@ -157,19 +137,16 @@ jobs:
                               super.onPageFinished(view, url);
                               swipe.setRefreshing(false);
                               progressBar.setVisibility(View.GONE);
-                              hideSplash();
                           }
 
                           @Override
                           public void onReceivedError(WebView view, WebResourceRequest request, WebResourceError error) {
                               if (request.isForMainFrame()) {
                                   view.loadUrl("file:///android_asset/public/error.html");
-                                  hideSplash();
                               }
                           }
                       });
                       
-                      // ২. শুরুতে নেট না থাকলে সাথে সাথে এরর পেজ লোড করো
                       if (!isNetworkAvailable()) {
                           webView.loadUrl("file:///android_asset/public/error.html");
                       }
@@ -180,7 +157,7 @@ jobs:
               public void onBackPressed() {
                   WebView webView = getBridge().getWebView();
                   if (webView.getUrl() != null && webView.getUrl().contains("error.html")) {
-                      webView.loadUrl(mainUrl);
+                      webView.loadUrl("${{ steps.meta.outputs.url }}");
                   } else if (webView.canGoBack()) {
                       webView.goBack();
                   } else {
